syntax = "proto3"

package game;

import "google/protobuf/timestamp.proto";

option packed = true;

message StartSessionRequest {
	string gameName = 1;
	string secretPhrase = 2;
	google.protobuf.Timestamp started_at = 3;
}

message StartSessionResponse {
	string sessionId = 1;
	string gameLink = 2;
}

message GetSessionRequest {
	string sessionId = 1;
}

message GetSessionResponse {
	string sessionId = 1;
	string gameLink = 2;
}

message AddPlayerRequest {
	string sessionId = 1;
	string name = 2;
}

message AddPlayerResponse {
	int32 sheetSize = 1;
	repeated int32 sheet = 2;
}

message PlayersList {
	repeated string players = 1;
}

message EnablePlayerRequest {
	string playerName = 1;
}

enum RulesType {
	NONE_MATCH            = 0;
	SINGLE_ROW_MATCH      = 1;
	SINGLE_COL_MATCH      = 2;
	SINGLE_DIAGONAL_MATCH = 3;
	TWO_ROWS_MATCH        = 4;
	TWO_COLS_MATCH        = 5;
	TWO_DIAGONAL_MATCH    = 6;
	FULL_HOUSE            = 7;
}

message EnablePlayerResponse {
	string playerName = 1;
	bool playerEnabled = 2;
}

message RulesListRequest {
	string sessionId = 1;
	repeated RulesType rules = 2;
}

message DrawNumberResponse {
	int32 number = 1;
}

message DrawnNumbersResponse {
	repeated int32 numbers = 1;
}

message StopSessionRequest {
	string sessionId = 1;
}

message StopSessionResponse {
	string sessionId = 1;
	bool status = 2;
	google.protobuf.Timestamp stopped_at = 3;
}

message WinnersResponse {
	string sessionId = 1;
	string player = 2;
}

service Game {
	rpc StartNewGame(StartSessionRequest) returns (StartSessionResponse) {}
	rpc GetGameLink(GetSessionRequest) returns (GetSessionResponse) {}
	rpc AddAPlayer(AddPlayerRequest) returns (AddPlayerResponse) {}
	rpc ListPlayers() returns (PlayersList) {}
	rpc EnablePlayer(EnablePlayerRequest) returns (EnabledPlayerReponse) {}
	rpc ApplyRules(RulesListRequest) returns (RulesListReponse) {}
	rpc DrawANumber() returns (DrawNumberResponse) {}
	rpc AttachToDraw() returns (stream DrawNumberResponse) {}
	rpc DrawNumbersList() returns (DrawnNumbersResponse) {}
	rpc AnnounceWinners() returns (stream WinnersResponse) {}
	rpc StopGame(StopSessionRequest) returns (StopSessionResponse) {}
}
